# Phosphor

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  install-dependencies.sh
src/: main.cpp
src/app/: App.cpp  App.hpp  AppState.hpp  Dialog.cpp  Dialog.hpp  UiPanels.cpp  UiPanels.hpp
src/core/: ColorScheme.cpp  ColorScheme.hpp  Dither.cpp  Dither.hpp  Filter.cpp  Filter.hpp  Glow.cpp  Glow.hpp  Image.cpp  Image.hpp  ImageF.cpp  ImageF.hpp  ImageIO.cpp  ImageIO.hpp  Params.hpp  Pipeline.cpp  Pipeline.hpp  Quantize.cpp  Quantize.hpp  Scanlines.cpp  Scanlines.hpp
src/gpu/: Texture2D.cpp  Texture2D.hpp
src/ui/: Style.cpp  Style.hpp
src/util/: ErrorManager.hpp  FileUtils.hpp
